--- a/py_course/functional_pro/practice.ipynb
+++ b/py_course/functional_pro/practice.ipynb
@@ -2,6 +2,157 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------- Complete the Registration Process ----------\n",
+      "---------- Please log in ----------\n",
+      "--------------- menu_bar ---------------\n",
+      "veg {'veg biryani': 100, 'pulav': 80}\n",
+      "non-veg {'chicken biryani': 150, 'motton biryani': 180}\n",
+      "****** Customer Details ******\n",
+      "{'name': 'imran', 'pin': 1111, 'cart': {datetime.datetime(2023, 11, 12, 15, 39, 32, 6873): ['veg biryani: ', 2, '-----', 200], datetime.datetime(2023, 11, 12, 15, 39, 43, 304070): ['motton biryani: ', 5, '-----', 900]}, 'id': 101}\n",
+      "****** Orders Cart ******\n",
+      "- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - \n",
+      "                               Item --- Quantity --- Price\n",
+      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
+      "2023-11-12 15:39:32.006873 ['veg biryani: ', 2, '-----', 200]\n",
+      "2023-11-12 15:39:43.304070 ['motton biryani: ', 5, '-----', 900]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "class hotel:\n",
+    "     hotel_name='Lalitha'\n",
+    "     address='Hyderabad'\n",
+    "     branch_name='Ameerpet'\n",
+    "     branch_code=143\n",
+    "     no_customers=0\n",
+    "     customer_details={}\n",
+    "     complete_customer_orders={}\n",
+    "     bank_balance=0\n",
+    "     menu_bar={'veg':{'veg biryani':100,'pulav':80},'non-veg':{'chicken biryani':150,'motton biryani':180}}\n",
+    "     def __init__(self):#name,mobile,email,age,adhaar,address,gender,pin):\n",
+    "          self.name=input('Enter your name:')\n",
+    "        #   self.mobile=int(input('Enter your mobile number:'))\n",
+    "        #   self.email=input('Enter your mail:')\n",
+    "        #   self.age=int(input('Enter your age:'))\n",
+    "        #   self.adhaar=int(input('Enter your adhaar number:'))\n",
+    "        #   self.address=input('Enter your address')\n",
+    "        #   self.gender=input('Enter your gender:')\n",
+    "          self.pin=int(input('Enter your pin:'))\n",
+    "          self.cart={}\n",
+    "          self.id_creation()\n",
+    "          self.concat_customer_details(self)\n",
+    "          # self.display()\n",
+    "\n",
+    "    #  id_creation \n",
+    "     def id_creation(self):\n",
+    "          hotel.no_customers+=1\n",
+    "          self.id=100+self.no_customers\n",
+    "\n",
+    "    #  adding the customer details into hotel server\n",
+    "\n",
+    "     @classmethod\n",
+    "     def concat_customer_details(cls,self):\n",
+    "          cls.customer_details[self.id]=self\n",
+    "    #  displaying customer details with cart\n",
+    "     def display(self):\n",
+    "          print('****** Customer Details ******')\n",
+    "          print(self.__dict__)\n",
+    "          print('****** Orders Cart ******')\n",
+    "          print('- '*40)\n",
+    "          print(' '*30,'Item','-'*3,'Quantity','-'*3,'Price')\n",
+    "          print('_ '*40)\n",
+    "          for i in self.cart:\n",
+    "                    print(i,self.cart[i])\n",
+    "\n",
+    "     def orders_cart(self,data):\n",
+    "          if datetime.datetime.now() in self.cart:\n",
+    "               self.cart[datetime.datetime.now()]+=data\n",
+    "          else:\n",
+    "               self.cart[datetime.datetime.now()]=data\n",
+    "\n",
+    "\n",
+    "          \n",
+    "     \n",
+    "     def log_in(self):\n",
+    "          c_id=int(input('Enter customer id:'))\n",
+    "          c_pin=int(input('Enter customer pin:'))\n",
+    "          if c_id == self.id and c_pin == self.pin:\n",
+    "               print('-'*15,'menu_bar','-'*15)\n",
+    "               for i in self.menu_bar:\n",
+    "                    print(i,self.menu_bar[i])\n",
+    "               self.orders()\n",
+    "          else:\n",
+    "               print('Invalid c_id or c_pin')\n",
+    "     \n",
+    "     def orders(self,i=3):\n",
+    "          n=int(input('Choose an option:\\n1.Veg\\n2.Non-Veg\\n3.Display Cart'))\n",
+    "          match n:\n",
+    "               case 1:\n",
+    "                    x=int(input('Choose an option:\\n1.Veg Biryani\\n2.Pulav\\n3.Exit')) \n",
+    "                    match x:\n",
+    "                         case 1:\n",
+    "                              m=int(input('Enter the quantity:'))    \n",
+    "                              # print('veg biryani: ',self.menu_bar['veg']['veg biryani']*m,'-'*5,m)\n",
+    "                              self.orders_cart(['veg biryani: ',m,'-'*5,self.menu_bar['veg']['veg biryani']*m])\n",
+    "                                   \n",
+    "                         case 2:\n",
+    "                              m=int(input('Enter the quantity:')) \n",
+    "     \n",
+    "                              # print('pulav: ',self.menu_bar['veg']['pulav']*3,'-'*5,m)\n",
+    "                              self.orders_cart(['pulav: ',m,'-'*5,self.menu_bar['veg']['pulav']*m])\n",
+    "                         case _:\n",
+    "                              return\n",
+    "               case 2:\n",
+    "                    y=int(input('Choose an option:\\n1.Chicken Biryani\\n2.Motton Biryani\\n3.Exit'))\n",
+    "                    match y:\n",
+    "                         case 1:\n",
+    "                              m=int(input('Enter the quantity:')) \n",
+    "                              self.orders_cart(['chicken biryani: ',m,'-'*5,self.menu_bar['non-veg']['chicken biryani']*m])\n",
+    "                         case 2:\n",
+    "                              m=int(input('Enter the quantity:')) \n",
+    "                              self.orders_cart(['motton biryani: ',m,'-'*5,self.menu_bar['non-veg']['motton biryani']*m])\n",
+    "                         case _:\n",
+    "                              return\n",
+    "               case _:\n",
+    "                    if i>=3:\n",
+    "                         self.display()\n",
+    "                         return \n",
+    "                    # self.display()\n",
+    "          return self.orders()\n",
+    "\n",
+    "\n",
+    "\n",
+    "             \n",
+    "          \n",
+    "# customer1=hotel()\n",
+    "# customer2=hotel()\n",
+    "# print(hotel.customer_details)\n",
+    "\n",
+    "\n",
+    "def main(cls):\n",
+    "     c_id=int(input('Enter customer id:'))\n",
+    "     c_pin=int(input('Enter customer pin:'))\n",
+    "     if c_id in cls.customer_details and c_pin == cls.customer_details[id].pin:\n",
+    "          self=cls.customer_details[id]\n",
+    "          self.log_in()\n",
+    "     else:\n",
+    "          print('-'*10,'Complete the Registration Process','-'*10)\n",
+    "          self=cls()\n",
+    "          print('-'*10,'Please log in','-'*10)\n",
+    "          self.log_in()\n",
+    "main(hotel)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -46,14 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "login succesfull\n"
+      "Login Successfull....\n",
+      "(1, 'chicken biryani', 140)\n",
+      "(2, 'mutton biryani', 330)\n",
+      "(3, 'chicken fry', 240)\n"
      ]
     }
    ],
@@ -64,28 +218,49 @@
     "cur2=con.cursor()\n",
     "\n",
     "\n",
-    "# class hotel:\n",
-    "#     users={}\n",
-    "#     address='hyd'\n",
-    "#     def __init__(self,id,pin):\n",
-    "#         self.id=id\n",
-    "#         self.pin=pin\n",
-    "#         print(self.__dict__)\n",
-    "#         for i in hotel.__dict__:\n",
-    "#             print(i,hotel.__dict__[i],sep='             ')\n",
+    "class hotel:\n",
+    "    def __init__(self,id,pin):\n",
+    "        self.id=id\n",
+    "        self.pin=pin\n",
+    "        \n",
+    "\n",
+    "    @classmethod\n",
+    "    def select(cls,self):\n",
+    "        val=int(input('select your choice:\\n1.VEG\\n2.NON-VEG\\n3.exit'))\n",
+    "        match val:\n",
+    "            case 1:\n",
+    "                cur1.execute('select* from veg')\n",
+    "                veg=cur1._rows\n",
+    "                for i in veg:print(i)\n",
+    "                ch=int(input('select your dish..'))\n",
+    "            case 2:\n",
+    "                cur1.execute('select* from nonveg')\n",
+    "                veg=cur1._rows\n",
+    "                for i in veg:print(i)\n",
+    "                ch=int(input('select your dish..'))\n",
     "\n",
     "\n",
-    "def home(u_name,id,pin):\n",
-    "    print('login succesfull')\n",
+    "# def home(u_name,id,pin):\n",
+    "#     # cur1.execute('create table cart (\"item\" varchar(255,\"quantity\" varchar(255),\"price\" int,\"total\" varchar(255)))')\n",
+    "#     val=int(input('select your choise:\\n1.VEG\\n2.NON-VEG\\n'))\n",
+    "#     match val:\n",
+    "#         case 1:\n",
+    "#             print('recipy'.center(25),'price'.center(25))\n",
+    "#             cur1.execute('select* from veg')\n",
+    "#             show=cur1._rows\n",
+    "#             for i in show:\n",
+    "#                 print(f'{i[0]}'.center(25),f'{i[1]}'.center(25))\n",
+    "#             home(u_name,id,pin)\n",
+    "#         case 2:\n",
+    "#             print('recipy'.center(25),'price'.center(25))\n",
+    "#             cur1.execute('select* from nonveg')\n",
+    "#             show=cur1._rows\n",
+    "#             for i in show:\n",
+    "#                 print(f'{i[0]}'.center(25),f'{i[1]}'.center(25))\n",
+    "                \n",
     "    # pass\n",
     "\n",
     "def login():\n",
-    "    # cur1.execute(f'select* from users where name=\"{u_name}\"')\n",
-    "    # VAL=cur1._rows\n",
-    "    # print(VAL)\n",
-    "    # # u_name=hotel(id,pin)\n",
-    "    # class food_menu:\n",
-    "    #      pass\n",
     "    u_name=input('enter your name')\n",
     "    id=int(input('inter ID:'))\n",
     "    pin=int(input('enter PIN:'))\n",
@@ -93,7 +268,16 @@
     "    value=cur1._rows\n",
     "    # print(value)\n",
     "    if len(value)!=0 and id==value[0][1] and pin==value[0][2]:\n",
-    "        home(u_name,id,pin)\n",
+    "        # cur1.execute('create table cart (\"item\" varchar(255,\"quantity\" varchar(255),\"price\" int,\"total\" varchar(255)))')\n",
+    "        print('Login Successfull....')\n",
+    "        # cur1.execute(f'select* from users where name=\"{u_name}\"')\n",
+    "        # VAL=cur1._rows\n",
+    "        # print(VAL[0])\n",
+    "        u_name=hotel(id,pin)\n",
+    "        hotel.select(u_name)\n",
+    "\n",
+    "        # home(u_name,id,pin)\n",
+    "\n",
     "        # pass\n",
     "    else:\n",
     "        print('enter login details currectly')\n",
@@ -113,16 +297,16 @@
     "            print('this line')\n",
     "            cur1.execute(f\"insert into users values ('{u_name}', {id}, {pin})\")\n",
     "            # con.commit()\n",
-    "            login(u_name,id,pin)\n",
+    "            login()\n",
     "\n",
     "def run():\n",
-    "    choice=int(input('select:\\n1.Register\\n2.Login\\n3.exit'))\n",
+    "    choice=(input('select:\\n1.Register\\n2.Login\\n3.exit'))\n",
     "    match choice:\n",
-    "        case 1:\n",
+    "        case '1':\n",
     "            register()\n",
-    "        case 2:\n",
+    "        case '2':\n",
     "            login()\n",
-    "        case _:\n",
+    "        case __:\n",
     "            print('exited')\n",
     "            return\n",
     "# user1=hotel(100,1111)\n",
@@ -132,6 +316,49 @@
     "cur1.close()\n",
     "cur2.close()\n",
     "con.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'chicken biryani', 140)\n",
+      "(2, 'mutton biryani', 330)\n",
+      "(3, 'chicken fry', 240)\n",
+      "-----------\n",
+      "(3, 'chicken fry', 240) <class 'tuple'>\n",
+      "<pymysql.cursors.Cursor object at 0x000002950A81FD00> <class 'pymysql.cursors.Cursor'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymysql\n",
+    "con=pymysql.connect(host='localhost',user='root',passwd='imran',database='mahfil')\n",
+    "cur1=con.cursor()\n",
+    "cur1.execute('select* from nonveg')\n",
+    "f=cur1\n",
+    "for i in f :\n",
+    "    print(i)\n",
+    "print('-----------')\n",
+    "# table=cur1.execute('create table cart (items varchar(200) unique)')\n",
+    "cur1.execute('select* from nonveg where recipy=\"chicken fry\"')\n",
+    "h=cur1\n",
+    "for i in h:print(i,type(i))\n",
+    "print(h,type(h))\n",
+    "# cur1.execute(f'insert into cart values(\"{h}\")')\n",
+    "# cur1.execute('select* from cart')\n",
+    "# table=cur1._rows\n",
+    "# print(table)\n",
+    "\n",
+    "# for i in cur1:\n",
+    "#     print(i)\n",
+    "cur1.close()\n",
+    "con.close()"
    ]
   },
   {
@@ -197,10 +424,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "() <class 'tuple'>\n",
+      "(('MILLER', 501, 94), ('BLACK', 502, 98), ('IMRAN', 503, 77), ('HARI', 504, 83), ('IMRANj', 100, 1111))\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymysql\n",
+    "con=pymysql.connect(host='localhost',user='root',passwd='imran',database='mydb15')\n",
+    "cur1=con.cursor()\n",
+    "name='IMRANk'\n",
+    "id=100\n",
+    "pin=1111\n",
+    "cur1.execute(f'select rollno,marks from student where name=\"IMRAN\" ')\n",
+    "# cur1.execute(f'insert into student values (\"{name}\",{id},{pin})')\n",
+    "cur1.execute(f'select * from student where name=\"{name}\"')\n",
+    "h=cur1._rows\n",
+    "print(h,type(h))\n",
+    "cur1.execute(f'select* from student')\n",
+    "\n",
+    "value=cur1._rows\n",
+    "print(value)\n",
+    "# con.commit()\n",
+    "cur1.close()\n",
+    "con.close()\n",
+    "# print(value)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "inheritance:\n",
+    "    1. Its a phenomenon of deriving the properties one class to another class is known as inheritance\n",
+    "    2. Inherit the properties base class to derived class\n",
+    "\n",
+    "created word-file =>"
+   ]
   }
  ],
  "metadata": {
