--- a/py_course/functional_pro/practice.ipynb
+++ b/py_course/functional_pro/practice.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -205,9 +205,9 @@
      "output_type": "stream",
      "text": [
       "Login Successfull....\n",
-      "(1, 'chicken biryani', 140)\n",
-      "(2, 'mutton biryani', 330)\n",
-      "(3, 'chicken fry', 240)\n"
+      "      item           price     \n",
+      "  veg_biryani         280      \n",
+      " mutton_biryani       1350     \n"
      ]
     }
    ],
@@ -222,22 +222,58 @@
     "    def __init__(self,id,pin):\n",
     "        self.id=id\n",
     "        self.pin=pin\n",
-    "        \n",
-    "\n",
+    "        self.cart={}\n",
+    "    def display(self):\n",
+    "        print('item'.center(15),'price'.center(15))\n",
+    "        for i in self.cart:\n",
+    "            print(f'{i}'.center(15),f'{self.cart[i]}'.center(15))\n",
     "    @classmethod\n",
     "    def select(cls,self):\n",
-    "        val=int(input('select your choice:\\n1.VEG\\n2.NON-VEG\\n3.exit'))\n",
+    "        val=int(input('select your choice:\\n1.VEG\\n2.NON-VEG\\n3.display_cart'))\n",
     "        match val:\n",
     "            case 1:\n",
-    "                cur1.execute('select* from veg')\n",
-    "                veg=cur1._rows\n",
-    "                for i in veg:print(i)\n",
-    "                ch=int(input('select your dish..'))\n",
+    "                x=int(input('1.paneer\\n2.veg_biryani'))\n",
+    "                q=int(input('enter quantity:'))\n",
+    "                # cur1.execute('select* from veg')\n",
+    "                match x:\n",
+    "                    case 1:\n",
+    "                        if 'paneer' not in self.cart:\n",
+    "                            self.cart['paneer']=70*q\n",
+    "                        else:\n",
+    "                            self.cart['paneer']+=self.cart['paneer']+70*q\n",
+    "                    case 2:\n",
+    "                        if 'veg_biryani' not in self.cart:\n",
+    "                            self.cart['veg_biryani']=70*q\n",
+    "                        else:\n",
+    "                            self.cart['veg_biryani']+=self.cart['veg_biryani']+70*q\n",
+    "                    case __:\n",
+    "                        return\n",
     "            case 2:\n",
-    "                cur1.execute('select* from nonveg')\n",
-    "                veg=cur1._rows\n",
-    "                for i in veg:print(i)\n",
-    "                ch=int(input('select your dish..'))\n",
+    "                x=int(input('1.chicken_biryani\\n2.mutton_biryani'))\n",
+    "                q=int(input('enter quantity:'))\n",
+    "                # cur1.execute('select* from veg')\n",
+    "                match x:\n",
+    "                    case 1:\n",
+    "                        if 'chicken_biryani' not in self.cart:\n",
+    "                            self.cart['chicken_biryani']=170*q\n",
+    "                        else:\n",
+    "                            self.cart['chicken_biryani']+=self.cart['chicken_biryani']+170*q\n",
+    "                    case 2:\n",
+    "                        if 'mutton_biryani' not in self.cart:\n",
+    "                            self.cart['mutton_biryani']=270*q\n",
+    "                        else:\n",
+    "                            self.cart['mutton_biryani']+=self.cart['mutton_biryani']+270*q\n",
+    "                    case __:\n",
+    "                        return\n",
+    "            case __:\n",
+    "                if val==3:\n",
+    "                    self.display()\n",
+    "                    return\n",
+    "        return self.select(self)\n",
+    "\n",
+    "                # veg=cur1._rows\n",
+    "                # for i in veg:print(i)\n",
+    "                # ch=int(input('select your dish..'))\n",
     "\n",
     "\n",
     "# def home(u_name,id,pin):\n",
