--- a/py_course/oops.ipynb
+++ b/py_course/oops.ipynb
@@ -1248,10 +1248,302 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'__module__': '__main__', 'a': 10, 'b': 20, '__dict__': <attribute '__dict__' of 'sample' objects>, '__weakref__': <attribute '__weakref__' of 'sample' objects>, '__doc__': None}\n",
+      "10 20\n",
+      "{'__module__': '__main__', '__doc__': None}\n",
+      "10 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "#13-11-23\n",
+    "#single inheritanse\n",
+    "class sample:\n",
+    "    a=10\n",
+    "    b=20\n",
+    "print(sample.__dict__)\n",
+    "print(sample.a,sample.b)\n",
+    "\n",
+    "class demo(sample):\n",
+    "    pass\n",
+    "print(demo.__dict__)\n",
+    "print(demo.a,demo.b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'__module__': '__main__', 'a': 10, 'b': 20, '__dict__': <attribute '__dict__' of 'sample' objects>, '__weakref__': <attribute '__weakref__' of 'sample' objects>, '__doc__': None}\n",
+      "10 20\n",
+      "{'__module__': '__main__', 'a': 200, '__doc__': None}\n",
+      "200 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class sample:\n",
+    "    a=10\n",
+    "    b=20\n",
+    "print(sample.__dict__)\n",
+    "print(sample.a,sample.b)\n",
+    "\n",
+    "class demo(sample):\n",
+    "    a=200            #variable overriding(re-initializing)\n",
+    "print(demo.__dict__)\n",
+    "print(demo.a,demo.b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'__module__': '__main__', 'a': 10, 'b': 20, '__init__': <function sample.__init__ at 0x000001ED5BF5DB40>, '__dict__': <attribute '__dict__' of 'sample' objects>, '__weakref__': <attribute '__weakref__' of 'sample' objects>, '__doc__': None}\n",
+      "10 20\n",
+      "{'__module__': '__main__', '__doc__': None}\n",
+      "10 20\n",
+      "10 20\n",
+      "100 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "class sample:\n",
+    "    a=10\n",
+    "    b=20\n",
+    "    def __init__(self,para):\n",
+    "        self.x=100\n",
+    "        self.y=200\n",
+    "print(sample.__dict__)\n",
+    "print(sample.a,sample.b)\n",
+    "\n",
+    "class demo(sample):\n",
+    "    pass\n",
+    "obj=demo('value')\n",
+    "print(demo.__dict__)\n",
+    "print(demo.a,demo.b)\n",
+    "# print(demo.x,demo.y)\n",
+    "print(obj.a,obj.b)\n",
+    "print(obj.x,obj.y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'__module__': '__main__', 'a': 10, 'b': 20, '__init__': <function sample.__init__ at 0x000001ED5BF5F5B0>, '__dict__': <attribute '__dict__' of 'sample' objects>, '__weakref__': <attribute '__weakref__' of 'sample' objects>, '__doc__': None}\n",
+      "10 20\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 37\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X51sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(sample\u001b[39m.\u001b[39m\u001b[39m__dict__\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X51sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m(sample\u001b[39m.\u001b[39ma,sample\u001b[39m.\u001b[39mb)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X51sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mdemo\u001b[39;00m(sample):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X51sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39mdel\u001b[39;00m a\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X51sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m obj\u001b[39m=\u001b[39mdemo(\u001b[39m'\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 37\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X51sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mdemo\u001b[39;00m(sample):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X51sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39mdel\u001b[39;00m a\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class sample:\n",
+    "    a=10\n",
+    "    b=20\n",
+    "    def __init__(self,para):\n",
+    "        self.x=100\n",
+    "        self.y=200\n",
+    "print(sample.__dict__)\n",
+    "print(sample.a,sample.b)\n",
+    "\n",
+    "class demo(sample):\n",
+    "    del a\n",
+    "obj=demo('value')\n",
+    "print(demo.__dict__)\n",
+    "print(demo.a,demo.b)\n",
+    "# print(demo.x,demo.y)\n",
+    "print(obj.a,obj.b)\n",
+    "print(obj.x,obj.y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class parent:\n",
+    "    a=100\n",
+    "    def __init__(self,x):\n",
+    "        self.x=x\n",
+    "class child(parent):\n",
+    "    b=2000\n",
+    "    def __init__(self, m):  #function overriding \n",
+    "        self.m=m\n",
+    "sai=parent('sai')\n",
+    "imran=child('imrankhan')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'__module__': '__main__', 'a': 100, '__init__': <function parent.__init__ at 0x000001ED5BF5DB40>, '__dict__': <attribute '__dict__' of 'parent' objects>, '__weakref__': <attribute '__weakref__' of 'parent' objects>, '__doc__': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(parent.__dict__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'__module__': '__main__', 'b': 2000, '__init__': <function child.__init__ at 0x000001ED5C04CB80>, '__doc__': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(child.__dict__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'m': 'sai'} 100 sai\n",
+      "{'m': 'imrankhan'} 100 2000 imrankhan\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sai.__dict__,sai.a,sai.m)\n",
+    "print(imran.__dict__,imran.a,imran.b,imran.m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class student:\n",
+    "    def __init__(self,name,rollno,phno):\n",
+    "        self.name=name\n",
+    "        self.rollno=rollno\n",
+    "        self.phno=phno\n",
+    "\n",
+    "rahul=student('rahul','101',464665465)\n",
+    "raju=student('raju','102',79724665)\n",
+    "\n",
+    "class student2(student):\n",
+    "    def __init__(self,name,rollno,phno,email,marks):\n",
+    "        self.name=name\n",
+    "        self.rollno=rollno\n",
+    "        self.phno=phno\n",
+    "        self.email=email\n",
+    "        self.marks=marks\n",
+    "dinga=student2('dinga','122',446464,'dsfkjl@gmail.com',78)\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'rahul', 'rollno': '101', 'phno': 464665465}\n",
+      "{'name': 'raju', 'rollno': '102', 'phno': 79724665}\n",
+      "{'name': 'dinga', 'rollno': '122', 'phno': 446464, 'email': 'dsfkjl@gmail.com', 'marks': 78}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rahul.__dict__)\n",
+    "print(raju.__dict__)\n",
+    "print(dinga.__dict__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'dinga', 'rollno': '122', 'phno': 446464, 'email': 'dsfkjl@gmail.com', 'marks': 78}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#constructor chaining\n",
+    "class student:\n",
+    "    def __init__(self,name,rollno,phno):\n",
+    "        self.name=name\n",
+    "        self.rollno=rollno\n",
+    "        self.phno=phno\n",
+    "\n",
+    "rahul=student('rahul','101',464665465)\n",
+    "raju=student('raju','102',79724665)\n",
+    "\n",
+    "class student2(student):\n",
+    "    def __init__(self,name,rollno,phno,email,marks):\n",
+    "        # student.__init__(self,name,rollno,phno)       #way-1: contructor chaining\n",
+    "        # super(student2,self).__init__(name,rollno,phno) #way-2:\n",
+    "        super().__init__(name,rollno,phno)                  #way-3:\n",
+    "        self.email=email\n",
+    "        self.marks=marks\n",
+    "dinga=student2('dinga','122',446464,'dsfkjl@gmail.com',78)\n",
+    "print(dinga.__dict__)\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
